test_case/rust-lang_rust/54468_423757872_2.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/nll/polonius-smoke-test.rs","byte_start":199,"byte_end":201,"line_start":7,"line_end":7,"column_start":5,"column_end":7,"is_primary":true,"text":[{"text":"    &x //~ ERROR","highlight_start":5,"highlight_end":7}],"label":"borrowed value does not live long enough","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/nll/polonius-smoke-test.rs","byte_start":212,"byte_end":213,"line_start":8,"line_end":8,"column_start":1,"column_end":2,"is_primary":false,"text":[{"text":"}","highlight_start":n-linux-gnu/lib
70532 ./obj/build/x86_64-unknown-linux-gnu/native
70300 ./obj/build/x86_64-unknown-linux-gnu/native/jemalloc
67624 ./obj/build/x86_64-unknown-linux-gnu/stage1-std/x86_64-unknown-linux-gnu/release/deps
65412 ./src/llvm-emscripten/test/CodeGen
